--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/projectImages/logo.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=2" />
     <meta property="og:image" content="https://github.com/mdyeates/my-portfolio/raw/main/src/images/screenshot.png" />
-    <meta name="author" content="Michael Yeates" />
+    <meta name="author" content="Haider Ali" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Michael Yeates is a talented web developer who creates amazing digital experiences. With a focus on user experience, Michael brings your website ideas to life with precision and style. Contact Michael today to learn how he can help you craft a compelling online presence that engages and inspires your audience."
+      content="Haider Ali is a talented web developer who creates amazing digital experiences. With a focus on user experience, Haider brings your website ideas to life with precision and style. Contact Haider today to learn how he can help you craft a compelling online presence that engages and inspires your audience."
     />
     <link
       rel="stylesheet"
@@ -25,7 +25,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Michael Yeates | Creative Web Developer based in Loughborough | Bringing your ideas to life</title>
+    <title>Haider Ali | Creative Web Developer based in Jersey City | Bringing your ideas to life</title>
   </head>
   <body>
     <div id="root"></div>
